<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KMP Translation</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="swap_languages">Swap languages</string>
    <string name="enter_a_text_to_translate">Enter a text to translate</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy</string>
    <string name="play_loud">Play loud</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="history">History</string>
    <string name="service_unavailable_error">An error happened. Please try again later. (Service unavailable)</string>
    <string name="client_error">An error happened. Contact support. (Client error)</string>
    <string name="server_error">An error happened. Please ty again later. (Server error)</string>
    <string name="unknown_error">An unknown error happened. Try again later.</string>
    <string name="record_audio">Record audio\n</string>
    <string name="error_speech_recognition_unavailable">Recognition is not available</string>
    <string name="stop_recording_audio">Stop Recording</string>
    <string name="apply_recording">Apply</string>
    <string name="record_audio_again">Record again</string>
    <string name="listening">Listening</string>
    <string name="start_talking">Click record and Start talking</string>
    <string name="lt_website">https://leotorrealba.com</string>

</resources>